kube-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-node-app
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: simple-node-app
